--- a/canopen.html
+++ b/canopen.html
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-1s" style="background-image: url(assets/images/probeersel-1-2000x1134.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-1s" style="background-image: url(assets/images/probeersel-1-2000x1134.jpg);">
 
     
 
