--- a/chamber 1.html
+++ b/chamber 1.html
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-r" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-r" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 0px;">
 
     
     <div class="container">
