--- a/heilig.html
+++ b/heilig.html
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-1w" style="background-image: url(assets/images/dsc-1491-1-2000x1324.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header1-1w" style="background-image: url(assets/images/dsc-1491-1-2000x1324.jpg);">
 
     
 
@@ -112,7 +112,6 @@
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
